# ozo-client-python

./: README.md  pyproject.toml
application/: app.py
application/access_data/: views.py
application/html/templates/: index.html
application/index/: views.py
application/nuts/: nuts_services.py
application/oid4vci/: views.py
instance/: config.py
